# human-os

./: .Cargo.toml.swp  .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json
.github/workflows/: rust.yml
src/: .main.rs.swp  App.css  App.tsx  Dashboard.tsx  HumanOSDashboard.tsx  color.ts  main.rs  main.tsx  sampling.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: engine.rs  lib.rs  main.rs  mod.rs
src-tauri/src/auxillary/: get_color_from_score.rs  mod.rs  state.rs
src-tauri/src/communication/: mod.rs  rs_sender.rs
src-tauri/src/logic/: cognitive_model.rs  decision_eng.rs  intervention.rs  mod.rs
src-tauri/src/logic/actions/: close_tab.rs  dnd.rs  take_break.rs
src-tauri/src/notifications/: mod.rs  notifications.rs
src-tauri/src/sys/: keyboard.rs  mouse.rs  system.rs
src-tauri/src/sys/windows/: window_context.rs  window_info.rs
src-tauri/src/ui/: mod.rs  tray_icon.rs
src/app/: index.html  mod.rs
src/assets/: filled-circle.rgba
src/communication/: TSXReciever.tsx
src/logic/: cognitive_model.rs  decision_eng.rs  mod.rs
src/logic/actions/: close_tab.rs  dnd.rs  mod.rs  take_break.rs
src/notifications/: notifications.rs
src/sys/: .keyboard.rs.swp  .system.rs.swp  .window.rs.swp  keyboard.rs  mod.rs  mouse.rs  system.rs  timeout_thread.rs  window.rs
src/sys/windows/: mod.rs  window.rs  window_context.rs  window_info.rs
src/system/: .keyboard.rs.swp  .sys_stats.rs.swp  keyboard.rs  mod.rs  sys_stats.rs  sys_track.rs  windows.rs
src/ui/: .rgba.rs.swp  .tray_icon.rs.swp  colors.rs  image.rs  mod.rs  rgba.rs  tray-icon.rs  tray_icon.rs
