[package]
name = "human-os"
version = "0.2.0"
edition = "2024"

[dependencies]
once_cell = "1.21.3"
rdev = "0.4.6"
x11rb = "0.13.2"
tokio = "1.50.0"
gtk = "0.15"
libayatana-appindicator = "0.2"
image = "0.25.10"
tempfile = "3.27.0"
rand = "0.10"

[profile.release]
opt-level = "z"        # optimize for size (or "s")
lto = true             # link-time optimization
codegen-units = 1      # better optimization
strip = true           # strip symbols
panic = "abort"        # removes unwinding machinery
