[package]
name = "human-os"
version = "0.2.2"
description = "This app works in the background to help manage the user's focus and emotions to use the computer more efficiently"
authors = ["Zach Richards"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "human_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
once_cell = "1.21.4"
rdev = "0.5.3"
x11rb = "0.13.2"
tokio = "1.52.1"
image = "0.25.10"
tempfile = "3.27.0"
rand = "0.10.1"
active-win-pos-rs = "0.10.1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[profile.release]
opt-level = "z"        # optimize for size (or "s")
lto = true             # link-time optimization
codegen-units = 1      # better optimization
strip = true           # strip symbols
panic = "abort"        # removes unwinding machinery
